<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".NewAutoActivity"
    tools:showIn="@layout/activity_new_auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/brandSpinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:tag="brandSpinner" />

            <EditText
                android:id="@+id/modelTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/model"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:tag="modelTextView"
                android:textSize="18sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/photoImageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="?attr/colorButtonNormal"
            android:tag="photoImageView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/yearImageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:paddingLeft="2dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:src="@drawable/calendar" />

            <EditText
                android:id="@+id/yearValueTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/year"
                android:inputType="number"
                android:maxLength="4"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:tag="yearValueTextView"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/seatsImageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical|end"
                android:paddingLeft="2dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:src="@drawable/seat" />

            <EditText
                android:id="@+id/seatsValueTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/seats"
                android:inputType="number"
                android:maxLength="3"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:tag="seatsValueTextView"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/bodyImageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:paddingLeft="2dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:src="@drawable/body" />

            <Spinner
                android:id="@+id/bodyStyleSpinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:tag="bodyStyleSpinner" />

            <ImageView
                android:id="@+id/priceImageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical|end"
                android:paddingLeft="2dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:src="@drawable/price" />

            <EditText
                android:id="@+id/priceValueTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:tag="priceValueTextView"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/fuelImageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical|end"
                android:paddingLeft="2dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:src="@drawable/fuel" />

            <EditText
                android:id="@+id/fuelValueTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/fuel_type"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:tag="fuelValueTextView"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/transmissionImageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:paddingLeft="2dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:src="@drawable/transmission" />

            <EditText
                android:id="@+id/transmissionValueTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/transmission"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:tag="transmissionValueTextView"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>