<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    card_view:cardCornerRadius="4dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/modelTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/photoImageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            card_view:srcCompat="?attr/colorButtonNormal" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="11"
            android:rowCount="4">

            <ImageView
                android:id="@+id/yearImageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_gravity="center"
                android:paddingLeft="2dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                card_view:srcCompat="@android:drawable/ic_menu_my_calendar" />

            <TextView
                android:id="@+id/yearTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/year"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/yearValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="2"
                android:layout_columnSpan="2"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/seatsImageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_row="0"
                android:layout_column="4"
                android:layout_gravity="center_vertical|end"
                android:paddingLeft="2dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                card_view:srcCompat="@drawable/seat" />

            <TextView
                android:id="@+id/seatsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="5"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/seats"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/seatsValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="6"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/priceImageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_row="0"
                android:layout_column="7"
                android:layout_gravity="center_vertical|end"
                android:paddingLeft="2dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                card_view:srcCompat="@drawable/price" />

            <TextView
                android:id="@+id/priceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="8"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/price_points"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/priceValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="9"

                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/bodyImageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_gravity="center"
                android:paddingLeft="2dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                card_view:srcCompat="@drawable/body" />

            <TextView
                android:id="@+id/bodyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_columnSpan="2"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/body_style"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/bodyValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="3"
                android:layout_columnSpan="8"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/fuelImageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_gravity="center_vertical|end"
                android:paddingLeft="2dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                card_view:srcCompat="@drawable/fuel" />

            <TextView
                android:id="@+id/fuelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="1"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/fuel_type"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/fuelValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="2"
                android:layout_columnSpan="9"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/transmissionImageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_gravity="center"
                android:paddingLeft="2dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                card_view:srcCompat="@drawable/transmission" />

            <TextView
                android:id="@+id/transmissionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_columnSpan="2"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/transmission"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/transmissionValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="3"
                android:layout_columnSpan="8"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textSize="18sp" />


        </GridLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>